tests/ui/from-backtrace-backtrace.stderr
error: deriving From requires no fields other than source and backtrace
 --> tests/ui/from-backtrace-backtrace.rs:9:5
  |
9 |     #[from]
  |     ^^^^^^^

error[E0277]: `Error` doesn't implement `std::fmt::Display`
 --> tests/ui/from-backtrace-backtrace.rs:8:12
  |
8 | pub struct Error(
  |            ^^^^^ `Error` cannot be formatted with the default formatter
  |
  = help: the trait `std::fmt::Display` is not implemented for `Error`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
note: required by a bound in `std::error::Error`
 --> $RUST/core/src/error.rs
  |
  | pub trait Error: Debug + Display {
  |                          ^^^^^^^ required by this bound in `Error`
